\name{NEWS}
\title{BTSPAS News}
\encoding{UTF-8}

%\section{CHANGES IN VERSION 2012.xxxx}{
%  \subsection{USER-VISIBLE CHANGES}{
%    \itemize{
%       \item None.
%    }
%  }
%   \subsection{BUG FIX}{
%     \itemize{
%       \item Add na.rm=TRUE to any() and all() function calls in data checking.
%     }
%   }
%}

\section{CHANGES IN VERSION 2020.9.1}{
  \subsection{USER-VISIBLE CHANGES}{
    \itemize{
      \item Fixed a bug in trace plots (from ggforce::facet_wrap_paginate) 
       when the last page doesn't have a full set of plots. Dummy plots added.
      \item Secondary axis added on right side of logit(P) fit and log(U) fit
     }
   }
}
\section{CHANGES IN VERSION 2020.2.1}{
  \subsection{USER-VISIBLE CHANGES}{
    \itemize{
      \item Added a vignette about forcing the run to 0 at the start and end of the study.
     }
   }
}
\section{CHANGES IN VERSION 2020.1.1}{
  \subsection{USER-VISIBLE CHANGES}{
    \itemize{
      \item Runtimings now added to output object.
      \item More testing of fall back options.
     }
   }
}


\section{CHANGES IN VERSION 2019.0101}{
  \subsection{USER-VISIBLE CHANGES}{
    \itemize{
      \item sampfrac argument deprecated. Only values of 1 now accepted. This never did work properly and will be
            removed in future releases.
      \item OpenBugs no longer supported.
      \item Diagonal model now allows you to fix some P's -- typically used when second trap is not running.
      \item All plots converted to ggplot format and stored in the plots object in the final result. An argument is available in the 
      fitting routines to stop saving output to files. 
      \item Bayesian p.value plot created for MarkAvail routines (issue #17) 
      \item Several vignettes created to replace and enhance demo files.
    }
  }
   \subsection{BUG FIX}{
     \itemize{
       \item  Corrected error in creating u2copy to improve mixing. Issue #18..