@@ -1,6 +1,6 @@
 Package: BTSPAS
-Version: 2020.9.1
-Date: 2020-09-01
+Version: 2020.12.1
+Date: 2020-12-01
 Title: Bayesian Time-Stratified Population Analysis
 Author: Carl J Schwarz <cschwarz.stat.sfu.ca@gmail.com> and
 	Simon J Bonner <sbonner6@uwo.ca>
