@@ -22,6 +22,7 @@ import(graphics)
 import(gridExtra)
 import(plyr)
 import(reshape2)
+import(scales)
 import(splines)
 import(stats)
 import(utils)
